--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
       </div>
     </div>
+    <h1 style='text-align:center'>Expected Wins:</h1>
     <h1 id='calculation' style='text-align:center'>8</h1>
   </div>
   <script src="js/app.js"></script>
